// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogTitle ACT theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-ad9osy-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ACT_ET theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-fqnb28-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ENCOURA theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1i168ue-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1i168ue-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1lwovbq-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1vp8pd2-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;
